--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </head>
 <body>
     <h1>Fingerprint Attendance System</h1>
-    <button id="registerBtn">Register Fingerprint</button>
-    <button id="loginBtn">Log In with Fingerprint</button>
+    <button id="registerBtn">Log In with Fingerprint</button>
+    <button id="loginBtn">register Fingerprint</button>
 
     <!-- Footer section -->
     <footer>
